--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -21,7 +21,12 @@ spring.flyway.baseline-on-migrate=false
 #logging.level.org.springframework.transaction=DEBUG
 spring.flyway.out-of-order=true
 # JPA, Hibernate and Spring Data
-spring.jpa.show-sql=${SHOW_SQL:false}
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=${SHOW_SQL:true}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.jadira.usertype.databaseZone=jvm
 spring.jpa.properties.jadira.usertype.javaZone=jvm
