#000 | Set current schema to public while specifying explicit jdbc url

--- a/infra/rpm/config/openchs.conf
+++ b/infra/rpm/config/openchs.conf
@@ -4,4 +4,4 @@ export OPENCHS_SERVER_OPTS="-Xmx250m -XX:ErrorFile=/var/log/openchs/jvm.log"
 export OPENCHS_DATABASE_HOST=localhost
 export OPENCHS_DATABASE_USER=openchs
 export OPENCHS_DATABASE_PASSWORD=password
-export OPENCHS_DATABASE_URL="jdbc:postgresql://localhost:5432/openchs"
+export OPENCHS_DATABASE_URL="jdbc:postgresql://localhost:5432/openchs?currentSchema=public"
