--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -111,3 +111,7 @@ server.tomcat.accesslog.enabled=true
 avni.connectToExotelInDev=${OPENCHS_EXOTEL_IN_DEV:false}
 
 avni.messagingScheduleMillis=${OPENCHS_MESSAGE_SEND_JOB_SCHEDULE:30000}
+
+#Cache
+avni.cache.max.entries=${OPENCHS_CACHE_MAX_ENTRIES:3}
+avni.cache.ttl.seconds=${OPENCHS_CACHE_TTL_SECONDS:10}
