--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -79,6 +79,9 @@ avni.keycloak.realms=%s/realms/%s
 #Exotel
 avni.connectToExotelInDev=${OPENCHS_EXOTEL_IN_DEV:false}
 
+#Cache
+avni.cache.max.entries=${OPENCHS_CACHE_MAX_ENTRIES:3}
+avni.cache.ttl.seconds=${OPENCHS_CACHE_TTL_SECONDS:10}
 
 logging.level.org.apache.http=DEBUG
 logging.level.httpclient.wire=DEBUG
