--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -110,3 +110,7 @@ server.tomcat.accesslog.enabled=true
 #Exotel
 avni.connectToExotelInDev=${OPENCHS_EXOTEL_IN_DEV:false}
 
+
+#Cache
+avni.cache.max.entries=${OPENCHS_CACHE_MAX_ENTRIES:3}
+avni.cache.ttl.seconds=${OPENCHS_CACHE_TTL_SECONDS:10}
