--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -82,6 +82,7 @@ avni.connectToExotelInDev=${OPENCHS_EXOTEL_IN_DEV:false}
 #Cache
 avni.cache.max.entries=${OPENCHS_CACHE_MAX_ENTRIES:3}
 avni.cache.ttl.seconds=${OPENCHS_CACHE_TTL_SECONDS:10}
+avni.cache.values.multiplier=${OPENCHS_CACHE_VALUES_MULTIPLIER:10}
 
 logging.level.org.apache.http=DEBUG
 logging.level.httpclient.wire=DEBUG
