#501 | Make use of maxWeight config for caching addresses with custom weigher

--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -80,9 +80,9 @@ avni.keycloak.realms=%s/realms/%s
 avni.connectToExotelInDev=${OPENCHS_EXOTEL_IN_DEV:false}
 
 #Cache
-avni.cache.max.entries=${OPENCHS_CACHE_MAX_ENTRIES:3}
-avni.cache.ttl.seconds=${OPENCHS_CACHE_TTL_SECONDS:10}
-avni.cache.values.multiplier=${OPENCHS_CACHE_VALUES_MULTIPLIER:10}
+avni.cache.max.entries=${OPENCHS_CACHE_MAX_ENTRIES:100}
+avni.cache.ttl.seconds=${OPENCHS_CACHE_TTL_SECONDS:600}
+avni.cache.max.weight=${OPENCHS_CACHE_MAX_WEIGHT:1000}
 
 logging.level.org.apache.http=DEBUG
 logging.level.httpclient.wire=DEBUG
