--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -113,6 +113,6 @@ avni.connectToExotelInDev=${OPENCHS_EXOTEL_IN_DEV:false}
 avni.messagingScheduleMillis=${OPENCHS_MESSAGE_SEND_JOB_SCHEDULE:30000}
 
 #Cache
-avni.cache.max.entries=${OPENCHS_CACHE_MAX_ENTRIES:3}
-avni.cache.ttl.seconds=${OPENCHS_CACHE_TTL_SECONDS:10}
-avni.cache.values.multiplier=${OPENCHS_CACHE_VALUES_MULTIPLIER:10}
+avni.cache.max.entries=${OPENCHS_CACHE_MAX_ENTRIES:100}
+avni.cache.ttl.seconds=${OPENCHS_CACHE_TTL_SECONDS:600}
+avni.cache.max.weight=${OPENCHS_CACHE_MAX_WEIGHT:1000}
