#396 - removed inDev properties related to identity provider. allow for multiple IDP providers in the same running instance of avni server.

--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -30,12 +30,13 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #Bugsnag
 avni.bugsnag.apiKey=${OPENCHS_SERVER_BUGSNAG_API_KEY:dummy}
 avni.bugsnag.releaseStage=${OPENCHS_BUGSNAG_RELEASE_STAGE:development}
+
 aws.accessKeyId=${OPENCHS_IAM_USER_ACCESS_KEY:dummy}
 aws.secretAccessKey=${OPENCHS_IAM_USER_SECRET_ACCESS_KEY:dummy}
 avni.bucketName=${OPENCHS_BUCKET_NAME:dev-user-media}
 avni.connectToS3InDev=${OPENCHS_S3_IN_DEV:false}
 avni.userPhoneNumberPattern=^\\+91[0-9]{10}
-avni.connectToCognitoInDev=${OPENCHS_COGNITO_IN_DEV:false}
+
 static.path=${OPENCHS_STATIC_PATH:/opt/openchs/static/}
 analytics.path=${OPENCHS_ANALYTICS_PATH:/opt/openchs/analytics/}
 
@@ -87,3 +88,5 @@ avni.cache.max.weight=${OPENCHS_CACHE_MAX_WEIGHT:1000}
 logging.level.org.apache.http=DEBUG
 logging.level.httpclient.wire=DEBUG
 avni.messagingScheduleMillis=${OPENCHS_MESSAGE_SEND_JOB_SCHEDULE:300000}
+
+avni.idp.type=${AVNI_IDP_TYPE:none}
