--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Build
 spring.profiles.active=${OPENCHS_MODE:dev}
+
 # Database
 avni.database=${OPENCHS_DATABASE:openchs}
 avni.database.port=${OPENCHS_DATABASE_PORT:5432}
@@ -11,15 +12,18 @@ spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
 spring.datasource.tomcat.testWhileIdle=true
 spring.datasource.tomcat.validationQuery=SELECT 1
 spring.datasource.tomcat.jdbc-interceptors=org.avni.server.framework.tomcat.SetOrganisationJdbcInterceptor
+
 #Bugsnag
 avni.bugsnag.apiKey=${OPENCHS_SERVER_BUGSNAG_API_KEY:dummy}
 avni.bugsnag.releaseStage=${OPENCHS_BUGSNAG_RELEASE_STAGE:development}
+
 # Flyway
 spring.flyway.schemas=public
 spring.flyway.baseline-on-migrate=false
 #logging.level.org.springframework.orm.jpa=DEBUG
 #logging.level.org.springframework.transaction=DEBUG
 spring.flyway.out-of-order=true
+
 # JPA, Hibernate and Spring Data
 spring.jpa.show-sql=${SHOW_SQL:false}
 spring.jpa.hibernate.ddl-auto=none
@@ -33,23 +37,29 @@ spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 avni.custom.query.timeout=${AVNI_CUSTOM_QUERY_TIMEOUT:3}
 avni.custom.query.max.rows=${AVNI_CUSTOM_QUERY_MAX_ROWS:2000}
+
 # Hibernate Search
 spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
-# Security, Auth*
+
+# Security
 spring.security.user.name=admin
 spring.security.user.password=secret
 management.security.roles=SUPERUSER
+avni.idp.type=${AVNI_IDP_TYPE:none}
+
+# Cognito
 cognito.clientid=${OPENCHS_CLIENT_ID:dummy}
 cognito.poolid=${OPENCHS_USER_POOL:dummy}
+
 # REST
 spring.jackson.serialization.fail-on-empty-beans=false
+
 # Application
 debug=false
 avni.defaultUserName=${OPENCHS_USER_NAME:admin}
 spring.servlet.multipart.max-file-size=10028KB
 spring.servlet.multipart.max-request-size=10028KB
 avni.userPhoneNumberPattern=^\\+91[0-9]{10}
-avni.connectToCognitoInDev=${OPENCHS_COGNITO_IN_DEV:false}
 
 # Network
 server.tomcat.protocol-header=x-forwarded-proto
