#396 - realm name as part of idp details

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -111,6 +111,7 @@ avni.keycloak.user.preferred.username=preferred_username
 avni.keycloak.user.uuid=custom:userUUID
 avni.keycloak.openid.connect.certs=%s/protocol/openid-connect/certs
 avni.keycloak.realms=%s/realms/%s
+avni.keycloak.realm=On-premise
 
 # Tomcat
 server.tomcat.basedir=${OPENCHS_ACCESS_LOG_DIR:.}
