--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -76,6 +76,7 @@ avni.keycloak.user.preferred.username=preferred_username
 avni.keycloak.user.uuid=custom:userUUID
 avni.keycloak.openid.connect.certs=%s/protocol/openid-connect/certs
 avni.keycloak.realms=%s/realms/%s
+avni.keycloak.realm=dummy
 
 #Exotel
 avni.connectToExotelInDev=${OPENCHS_EXOTEL_IN_DEV:false}
