#396 - audience should not be used as client id, it should be a separate property. avni-web-app as the name for audience needs to be changed still.

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -104,8 +104,10 @@ keycloak.resource=admin-api
 keycloak.ssl-required=external
 keycloak.credentials.secret=${OPENCHS_KEYCLOAK_CLIENT_SECRET:dummy}
 keycloak.use-resource-role-mappings=true
+avni.keycloak.client=avni-client
 avni.connectToKeycloak=${OPENCHS_KEYCLOAK_ENABLED:false}
-avni.keycloak.verify.token.audience=avni-client
+# this has to be changed to avni-server
+avni.keycloak.verify.token.audience=avni-web-app
 avni.keycloak.user.email.verified=email_verified
 avni.keycloak.user.preferred.username=preferred_username
 avni.keycloak.user.uuid=custom:userUUID
