--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -69,8 +69,9 @@ keycloak.resource=admin-api
 keycloak.ssl-required=external
 keycloak.credentials.secret=${OPENCHS_KEYCLOAK_CLIENT_SECRET:dummy}
 keycloak.use-resource-role-mappings=true
+avni.keycloak.client=avni-client
 avni.connectToKeycloak=${OPENCHS_KEYCLOAK_ENABLED:false}
-avni.keycloak.verify.token.audience=avni-client
+avni.keycloak.verify.token.audience=avni-web-app
 avni.keycloak.user.email.verified=email_verified
 avni.keycloak.user.preferred.username=preferred_username
 avni.keycloak.user.uuid=custom:userUUID
