Update keycloak audience to "avni-server"
Update keycloak audience to "avni-server" to stay in-sync with keycloak starter-realm.json changes

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -107,7 +107,7 @@ keycloak.use-resource-role-mappings=true
 avni.keycloak.client=avni-client
 avni.connectToKeycloak=${OPENCHS_KEYCLOAK_ENABLED:false}
 # this has to be changed to avni-server
-avni.keycloak.verify.token.audience=avni-web-app
+avni.keycloak.verify.token.audience=avni-server
 avni.keycloak.user.email.verified=email_verified
 avni.keycloak.user.preferred.username=preferred_username
 avni.keycloak.user.uuid=custom:userUUID
