#0 - default idp type is cognito

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -46,7 +46,7 @@ spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
 spring.security.user.name=admin
 spring.security.user.password=secret
 management.security.roles=SUPERUSER
-avni.idp.type=${AVNI_IDP_TYPE:none}
+avni.idp.type=${AVNI_IDP_TYPE:cognito}
 
 # Cognito
 cognito.clientid=${OPENCHS_CLIENT_ID:dummy}
