--- a/avni-server-api/build.gradle
+++ b/avni-server-api/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     compile 'com.amazonaws:aws-java-sdk-s3'
     compile 'com.amazonaws:aws-java-sdk-cognitoidp'
     compile 'commons-validator:commons-validator:1.4.1'
+    compile 'org.passay:passay:1.6.3'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.keycloak:keycloak-spring-boot-starter:21.0.2'
     implementation 'org.keycloak:keycloak-admin-client:21.0.2'
