avniproject/avni-security#12 | Ensure sort order can only accept case insensitive asc or desc

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -54,6 +54,7 @@ cognito.poolid=${OPENCHS_USER_POOL:dummy}
 
 # REST
 spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.mapper.accept-case-insensitive-enums=true
 
 # Application
 debug=false
