avniproject/avni-security#7 - wrapper request object to neutralise any JavaScript/CSS present in the request parameters. added content security policy.

--- a/avni-server-api/build.gradle
+++ b/avni-server-api/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     testCompile 'org.powermock:powermock-module-junit4:2.0.9'
     runtime("org.springframework.boot:spring-boot-properties-migrator")
     implementation 'org.apache.tika:tika-core:2.7.0'
+    compile 'org.owasp.encoder:encoder:1.2.3'
 }
 
 bootRun {
