--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -47,6 +47,7 @@ spring.security.user.name=admin
 spring.security.user.password=secret
 management.security.roles=SUPERUSER
 avni.idp.type=${AVNI_IDP_TYPE:cognito}
+avni.webapp.timeout.in.minutes=${AVNI_WEBAPP_TIMEOUT:20}
 avni.blacklisted.urls-file=${AVNI_BLACKLISTED_URLS_FILE:}
 avni.csrf.enabled=true
 
