--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -91,5 +91,6 @@ logging.level.httpclient.wire=DEBUG
 avni.messagingScheduleMillis=${OPENCHS_MESSAGE_SEND_JOB_SCHEDULE:300000}
 
 avni.idp.type=${AVNI_IDP_TYPE:none}
+avni.webapp.timeout.in.minutes=${AVNI_WEBAPP_TIMEOUT:20}
 avni.blacklisted.urls-file=
 avni.csrf.enabled=false
