avniproduct/avni-security#10 | Add validHosts parameter

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -50,6 +50,7 @@ avni.idp.type=${AVNI_IDP_TYPE:cognito}
 avni.webapp.timeout.in.minutes=${AVNI_WEBAPP_TIMEOUT:20}
 avni.blacklisted.urls-file=${AVNI_BLACKLISTED_URLS_FILE:}
 avni.csrf.enabled=true
+avni.web.validHosts=${AVNI_WEB_VALIDHOSTS:}
 
 # Cognito
 cognito.clientid=${OPENCHS_CLIENT_ID:dummy}
