avniproduct/avni-security#10 | Fix tests

--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -94,3 +94,4 @@ avni.idp.type=${AVNI_IDP_TYPE:none}
 avni.webapp.timeout.in.minutes=${AVNI_WEBAPP_TIMEOUT:20}
 avni.blacklisted.urls-file=
 avni.csrf.enabled=false
+avni.web.validHosts=${AVNI_WEB_VALIDHOSTS:}
