avniproject/avni-product#1383 | Add job for avni-server prod deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -160,6 +160,14 @@ jobs:
       - deploy:
           hostname: "ssh.perf.avniproject.org"
 
+  PROD_deploy:
+    docker:
+      - image: circleci/openjdk:8-jdk
+    working_directory: ~/
+    steps:
+      - deploy:
+          hostname: "ssh.prod.avniproject.org"
+
 workflows:
   version: 2
   test_and_build_and_deploy:
