--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -88,6 +88,7 @@ minio.accessKey=${OPENCHS_MINIO_ACCESS_KEY:dummy}
 minio.secretAccessKey=${OPENCHS_MINIO_SECRET_ACCESS_KEY:dummy}
 
 static.path=${OPENCHS_STATIC_PATH:/opt/openchs/static/}
+csp.allowed.hosts=${OPENCHS_CSP_ALLOWED_HOSTS:*.amazonaws.com keycloak-staging.avniproject.org}
 analytics.path=${OPENCHS_ANALYTICS_PATH:/opt/openchs/analytics/}
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.batch.initialize-schema=always
