#000 | Vivek/Suhas | Fix integration test failure by adding newly introduced property to test

--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -95,3 +95,4 @@ avni.webapp.timeout.in.minutes=${AVNI_WEBAPP_TIMEOUT:20}
 avni.blacklisted.urls-file=
 avni.csrf.enabled=${AVNI_CSRF_ENABLED:false}
 avni.web.validHosts=${AVNI_WEB_VALIDHOSTS:}
+csp.allowed.hosts=dummy
