avniproject/avni-security#15 | WIP - server validations

--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -95,4 +95,5 @@ avni.webapp.timeout.in.minutes=${AVNI_WEBAPP_TIMEOUT:20}
 avni.blacklisted.urls-file=
 avni.csrf.enabled=${AVNI_CSRF_ENABLED:false}
 avni.web.validHosts=${AVNI_WEB_VALIDHOSTS:}
+avni.enhancedValidation.enabled=${AVNI_ENHANCED_VALIDATION:false}
 csp.allowed.hosts=dummy
