--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -134,3 +134,5 @@ avni.messagingScheduleMillis=${OPENCHS_MESSAGE_SEND_JOB_SCHEDULE:300000}
 avni.cache.max.entries=${OPENCHS_CACHE_MAX_ENTRIES:100}
 avni.cache.ttl.seconds=${OPENCHS_CACHE_TTL_SECONDS:600}
 avni.cache.max.weight=${OPENCHS_CACHE_MAX_WEIGHT:1000}
+
+avni.enhancedValidation.enabled=${AVNI_ENHANCED_VALIDATION:false}
