avniproject/avni-server#47 - provide as much detail as possible (including stack trace) based on avni.exception.in.response. Full stack trace for development environment and for users to report full error. turned on enhanced validation by default.

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -133,4 +133,5 @@ avni.cache.max.entries=${OPENCHS_CACHE_MAX_ENTRIES:100}
 avni.cache.ttl.seconds=${OPENCHS_CACHE_TTL_SECONDS:600}
 avni.cache.max.weight=${OPENCHS_CACHE_MAX_WEIGHT:1000}
 
-avni.enhancedValidation.enabled=${AVNI_ENHANCED_VALIDATION:false}
+avni.enhancedValidation.enabled=${AVNI_ENHANCED_VALIDATION:true}
+avni.exception.in.response=${AVNI_SEND_EXCEPTION_IN_RESPONSE:true}
