--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -97,3 +97,4 @@ avni.csrf.enabled=${AVNI_CSRF_ENABLED:false}
 avni.web.validHosts=${AVNI_WEB_VALIDHOSTS:}
 avni.enhancedValidation.enabled=${AVNI_ENHANCED_VALIDATION:false}
 csp.allowed.hosts=dummy
+avni.exception.in.response=true
