avniproject/avni-security#46 - WIP - provide response to keycloak to get the public key from.

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -109,6 +109,7 @@ keycloak.resource=admin-api
 keycloak.ssl-required=external
 keycloak.credentials.secret=${OPENCHS_KEYCLOAK_CLIENT_SECRET:dummy}
 keycloak.use-resource-role-mappings=true
+avni.keycloak.avni.publicKeyId=dummy
 avni.keycloak.client=avni-client
 avni.keycloak.verify.token.audience=avni-server
 avni.keycloak.user.email.verified=email_verified
