--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -98,3 +98,5 @@ avni.web.validHosts=${AVNI_WEB_VALIDHOSTS:}
 avni.enhancedValidation.enabled=${AVNI_ENHANCED_VALIDATION:false}
 csp.allowed.hosts=dummy
 avni.exception.in.response=true
+
+avni.keycloak.avni.publicKeyId=dummy
