avniproject/avni-security#46 - Endpoint that will be called by keycloak to get the public key. properties to provide public key and id. public key for local development and testing purposes - checked that it doesn't get packaged in the jar.

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -109,7 +109,8 @@ keycloak.resource=admin-api
 keycloak.ssl-required=external
 keycloak.credentials.secret=${OPENCHS_KEYCLOAK_CLIENT_SECRET:dummy}
 keycloak.use-resource-role-mappings=true
-avni.keycloak.avni.publicKeyId=dummy
+avni.keycloak.avni.publicKeyId=${AVNI_KEYCLOAK_AVNI_PUBLIC_KEY_ID:c08819a6-b22b-45db-a780-f1fb2ac7a837}
+avni.keycloak.avni.publicKey=${AVNI_KEYCLOAK_AVNI_PUBLIC_KEY:dummy}
 avni.keycloak.client=avni-client
 avni.keycloak.verify.token.audience=avni-server
 avni.keycloak.user.email.verified=email_verified
