avniproject/avni-security#46 - figuring out why decrypt is not working. keycloak seems to be providing the wrong CEK in the idToken value after auth.

--- a/avni-server-api/build.gradle
+++ b/avni-server-api/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     runtime("org.springframework.boot:spring-boot-properties-migrator")
     implementation 'org.apache.tika:tika-core:2.7.0'
     compile 'org.owasp.encoder:encoder:1.2.3'
+    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '7.9'
 }
 
 bootRun {
