--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -31,6 +31,10 @@ spring.jpa.properties.jadira.usertype.javaZone=jvm
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
 spring.jpa.properties.hibernate.dialect=org.avni.server.framework.postgres.CHSPostgreSQL94Dialect
 spring.jpa.properties.hibernate.ejb.interceptor=org.avni.server.framework.hibernate.UpdateOrganisationHibernateInterceptor
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+spring.jpa.properties.hibernate.cache.use_query_cache=true
+spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+spring.cache.jcache.config=${AVNI_EHCACHE_FILE:classpath:ehcache.xml}
 spring.jpa.database-platform=org.avni.server.framework.postgres.CHSPostgreSQL94Dialect
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
@@ -59,7 +63,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 spring.jackson.mapper.accept-case-insensitive-enums=true
 
 # Application
-debug=false
+debug=true
 avni.defaultUserName=${OPENCHS_USER_NAME:admin}
 spring.servlet.multipart.max-file-size=10028KB
 spring.servlet.multipart.max-request-size=10028KB
