--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -17,6 +17,10 @@ spring.jpa.properties.jadira.usertype.javaZone=jvm
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
 spring.jpa.properties.hibernate.dialect=org.avni.server.framework.postgres.CHSPostgreSQL94Dialect
 spring.jpa.properties.hibernate.ejb.interceptor=org.avni.server.framework.hibernate.UpdateOrganisationHibernateInterceptor
+spring.jpa.properties.hibernate.cache.use_second_level_cache=false
+spring.jpa.properties.hibernate.cache.use_query_cache=false
+spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+spring.cache.jcache.config=${AVNI_EHCACHE_FILE:classpath:ehcache.xml}
 spring.jpa.database-platform=org.avni.server.framework.postgres.CHSPostgreSQL94Dialect
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.profiles.active=${OPENCHS_MODE:test}
