--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -62,7 +62,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 spring.jackson.mapper.accept-case-insensitive-enums=true
 
 # Application
-debug=true
+debug=false
 avni.defaultUserName=${OPENCHS_USER_NAME:admin}
 spring.servlet.multipart.max-file-size=10028KB
 spring.servlet.multipart.max-request-size=10028KB
