#605 | Limit no of rows that can be exported via longitudinal export to 10k

--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -27,6 +27,7 @@ spring.profiles.active=${OPENCHS_MODE:test}
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 avni.custom.query.timeout=${AVNI_CUSTOM_QUERY_TIMEOUT:5}
 avni.custom.query.max.rows=${AVNI_CUSTOM_QUERY_MAX_ROWS:2000}
+avni.longitudinal.export.v2.limit=${AVNI_LONGITUDINAL_EXPORT_V2_LIMIT:10000}
 cognito.clientid=dummy
 cognito.poolid=dummy
 avni.defaultUserName=admin
