--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -28,6 +28,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 avni.custom.query.timeout=${AVNI_CUSTOM_QUERY_TIMEOUT:5}
 avni.custom.query.max.rows=${AVNI_CUSTOM_QUERY_MAX_ROWS:2000}
 avni.longitudinal.export.v2.limit=${AVNI_LONGITUDINAL_EXPORT_V2_LIMIT:10000}
+avni.legacy.longitudinal.export.limit=${AVNI_LEGACY_LONGITUDINAL_EXPORT_LIMIT:10000}
 cognito.clientid=dummy
 cognito.poolid=dummy
 avni.defaultUserName=admin
