avniproject/integration-service#96 - lastModified is not mandatory

--- a/avni-server-api/src/main/resources/api/external-api.yaml
+++ b/avni-server-api/src/main/resources/api/external-api.yaml
@@ -36,7 +36,7 @@ paths:
           explode: true
           schema:
             type: string
-        - name: subjectType
+        - name: subjectTypeName
           in: query
           description: subject type
           required: false
