Add Dockerfile and CI job for creating Docker image
(cherry picked from commit cb6321f57be33440f19b0f2d896f176b4af05608)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,7 +101,7 @@ jobs:
 
     - run: sudo apt-get install make openssl
 
-    - run: make upload-rpm
+    - run: make build_server
 
     - save_cache:
         paths:
@@ -112,11 +112,11 @@ jobs:
 
     - run: mkdir -p ~/artifacts;
 
-    - run: cp minor_version ~/artifacts/minor_version;
+    # - run: cp minor_version ~/artifacts/minor_version;
 
-    - run: cp major_version ~/artifacts/major_version;
+    # - run: cp major_version ~/artifacts/major_version;
 
-    - run: cp ~/avni-server/avni-server-api/build/distributions/avni-server-*.noarch.rpm ~/artifacts/;
+    # - run: cp ~/avni-server/avni-server-api/build/distributions/avni-server-*.noarch.rpm ~/artifacts/;
 
     - run: cp ~/avni-server/avni-server-api/build/libs/avni-server-*.jar ~/artifacts/;
 
@@ -131,6 +131,52 @@ jobs:
     - store_artifacts:
         path: ~/artifacts
 
+  build_docker_image:
+    docker:
+      - image: docker:latest
+    resource_class: medium
+    working_directory: ~/avni-server
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/artifacts
+
+      - setup_remote_docker
+
+      - run: mkdir -p ~/avni-server/avni-server-api/build/libs/
+
+      - run: cp ~/artifacts/avni-server-*.jar ~/avni-server/avni-server-api/build/libs/
+
+      - run:
+          name: Determine Docker Tags
+          command: |
+            if [ "$CIRCLE_BRANCH" == "master" ]; then
+              DOCKER_TAG="latest"
+            elif [ -n "$CIRCLE_TAG" ]; then
+              DOCKER_TAG="$CIRCLE_TAG"
+            else
+              echo "No valid tag found. Exiting."
+              exit 1
+            fi
+            echo "export DOCKER_TAG=$DOCKER_TAG" >> $BASH_ENV
+          shell: /bin/sh
+
+      - run:
+          name: Authenticate with Docker Hub
+          command: |
+            echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+
+      - run:
+          name: Build Multi-Platform Docker Image
+          command: |
+            source $BASH_ENV
+            docker buildx create --use
+            docker buildx build --platform linux/amd64,linux/arm64 --tag "$DOCKER_USERNAME/avni-server:${DOCKER_TAG}" --push -f Dockerfile .
+            if [ "$CIRCLE_BRANCH" == "master" ]; then
+              SHORT_CIRCLE_SHA=$(echo "$CIRCLE_SHA1" | cut -c1-6)
+              docker buildx build --platform linux/amd64,linux/arm64 --tag "$DOCKER_USERNAME/avni-server:${SHORT_CIRCLE_SHA}" --push -f Dockerfile .
+            fi
+  
   STAGING_deploy:
     docker:
     - image: circleci/openjdk:8-jdk
@@ -170,15 +216,29 @@ jobs:
     steps:
       - deploy:
           hostname: "ssh.prod.avniproject.org"
-
+          
+tags_filter: &tags_filter
+  filters:
+    tags:
+      only: /.*/
 workflows:
   version: 2
   test_and_build_and_deploy:
     jobs:
-    - test
+    - test:
+        <<: *tags_filter
     - build:
+        <<: *tags_filter
         requires:
-          - test
+          - test     
+    - build_docker_image:
+        requires:
+          - build
+        filters:
+          tags:
+            only: /.*/
+          branches:
+            only: master
     - STAGING_approve:
         type: approval
         requires:
