Add dockerhub context into workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -233,6 +233,8 @@ workflows:
         requires:
           - test     
     - build_docker_image:
+        context:
+          - dockerhub
         requires:
           - build
         filters:
