Update workflow docker image tag
Co-authored-by: SanoferSameera <sanofersameera.s@thoughtworks.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,11 +170,12 @@ jobs:
 
   build_docker_image:
     docker:
-      - image: docker:latest
+      - image: docker:git
     resource_class: medium
     working_directory: ~/avni-server
     steps:
       - checkout
+      
       - attach_workspace:
           at: ~/artifacts
 
