avniproject/avni-product#1433 | STAGING_deploy deploys to new staging server
(cherry picked from commit 612f29d84b29ab08b73cc2be8e813ee9814ff960)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,15 +207,15 @@ jobs:
               docker buildx build --platform linux/amd64,linux/arm64 --tag "$DOCKER_USERNAME/avni-server:${SHORT_CIRCLE_SHA}" --push -f Dockerfile .
             fi
   
-  STAGING_deploy:
-    docker:
-    - image: circleci/openjdk:8-jdk
-    working_directory: ~/
-    steps:
-    - deploy:
-        hostname: "ssh.staging.openchs.org"
+#  STAGING_deploy:
+#    docker:
+#    - image: circleci/openjdk:8-jdk
+#    working_directory: ~/
+#    steps:
+#    - deploy:
+#        hostname: "ssh.staging.openchs.org"
 
-  NEW_STAGING_deploy:
+  STAGING_deploy:
     docker:
       - image: cimg/deploy:2023.09
     working_directory: ~/
@@ -288,14 +288,14 @@ workflows:
         context: non-prod-deploy
         requires:
           - STAGING_approve
-    - NEW_STAGING_approve:
-        type: approval
-        requires:
-          - build
-    - NEW_STAGING_deploy:
-        context: non-prod-deploy
-        requires:
-          - NEW_STAGING_approve
+#    - NEW_STAGING_approve:
+#        type: approval
+#        requires:
+#          - build
+#    - NEW_STAGING_deploy:
+#        context: non-prod-deploy
+#        requires:
+#          - NEW_STAGING_approve
     - UAT_approve:
         type: approval
         requires:
