--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -206,14 +206,6 @@ jobs:
               SHORT_CIRCLE_SHA=$(echo "$CIRCLE_SHA1" | cut -c1-6)
               docker buildx build --platform linux/amd64,linux/arm64 --tag "$DOCKER_USERNAME/avni-server:${SHORT_CIRCLE_SHA}" --push -f Dockerfile .
             fi
-  
-#  STAGING_deploy:
-#    docker:
-#    - image: circleci/openjdk:8-jdk
-#    working_directory: ~/
-#    steps:
-#    - deploy:
-#        hostname: "ssh.staging.openchs.org"
 
   STAGING_deploy:
     docker:
@@ -238,6 +230,14 @@ jobs:
     steps:
     - deploy:
         hostname: "ssh.prerelease.openchs.org"
+
+  NEW_PRERELEASE_deploy:
+    docker:
+      - image: cimg/deploy:2023.09
+    working_directory: ~/
+    steps:
+      - deploy_as_service:
+          env: "prerelease"
 
   PERF_deploy:
     docker:
@@ -288,14 +288,6 @@ workflows:
         context: non-prod-deploy
         requires:
           - STAGING_approve
-#    - NEW_STAGING_approve:
-#        type: approval
-#        requires:
-#          - build
-#    - NEW_STAGING_deploy:
-#        context: non-prod-deploy
-#        requires:
-#          - NEW_STAGING_approve
     - UAT_approve:
         type: approval
         requires:
@@ -312,6 +304,14 @@ workflows:
         context: non-prod-deploy
         requires:
         - PRERELEASE_approve
+    - NEW_PRERELEASE_approve:
+        type: approval
+        requires:
+          - build
+    - NEW_PRERELEASE_deploy:
+        context: non-prod-deploy
+        requires:
+          - NEW_PRERELEASE_approve
     - PERF_approve:
         type: approval
         requires:
