--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,15 +223,15 @@ jobs:
     - deploy:
         hostname: "ssh.uat.openchs.org"
 
-  PRERELEASE_deploy:
-    docker:
-    - image: circleci/openjdk:8-jdk
-    working_directory: ~/
-    steps:
-    - deploy:
-        hostname: "ssh.prerelease.openchs.org"
+#  PRERELEASE_deploy:
+#    docker:
+#    - image: circleci/openjdk:8-jdk
+#    working_directory: ~/
+#    steps:
+#    - deploy:
+#        hostname: "ssh.prerelease.openchs.org"
 
-  NEW_PRERELEASE_deploy:
+  PRERELEASE_deploy:
     docker:
       - image: cimg/deploy:2023.09
     working_directory: ~/
@@ -304,14 +304,6 @@ workflows:
         context: non-prod-deploy
         requires:
         - PRERELEASE_approve
-    - NEW_PRERELEASE_approve:
-        type: approval
-        requires:
-          - build
-    - NEW_PRERELEASE_deploy:
-        context: non-prod-deploy
-        requires:
-          - NEW_PRERELEASE_approve
     - PERF_approve:
         type: approval
         requires:
