--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -134,6 +134,7 @@ server.tomcat.accesslog.enabled=true
 avni.connectToExotelInDev=${OPENCHS_EXOTEL_IN_DEV:false}
 
 avni.messagingScheduleMillis=${OPENCHS_MESSAGE_SEND_JOB_SCHEDULE:300000}
+avni.messaging.scheduledSinceDays=${AVNI_SEND_MESSAGES_SCHEDULED_SINCE_DAYS:4}
 
 #Cache
 avni.cache.max.entries=${OPENCHS_CACHE_MAX_ENTRIES:100}
@@ -142,3 +143,5 @@ avni.cache.max.weight=${OPENCHS_CACHE_MAX_WEIGHT:1000}
 
 avni.enhancedValidation.enabled=${AVNI_ENHANCED_VALIDATION:true}
 avni.exception.in.response=${AVNI_SEND_EXCEPTION_IN_RESPONSE:true}
+
+logging.level.org.hibernate.SQL=OFF
