--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -95,6 +95,7 @@ avni.cache.max.weight=${OPENCHS_CACHE_MAX_WEIGHT:1000}
 logging.level.org.apache.http=DEBUG
 logging.level.httpclient.wire=DEBUG
 avni.messagingScheduleMillis=${OPENCHS_MESSAGE_SEND_JOB_SCHEDULE:300000}
+avni.messaging.scheduledSinceDays=${AVNI_SEND_MESSAGES_SCHEDULED_SINCE_DAYS:4}
 
 avni.idp.type=${AVNI_IDP_TYPE:none}
 avni.webapp.timeout.in.minutes=${AVNI_WEBAPP_TIMEOUT:20}
